Fixed motion mobile view on iOS.

--- a/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.scss
+++ b/client/src/app/site/motions/modules/motion-detail/components/motion-detail/motion-detail.component.scss
@@ -156,6 +156,12 @@ span {
     }
 }
 
+.mobile-view {
+    .os-card {
+        padding: 27px;
+        max-width: calc(100% - 54px);
+    }
+}
 .title-line {
     display: flex;
 }
